Fixed file opening for MacOS